# video-sarayi

./: .gitignore  CLAUDE.md  README.md  presets.json  pyproject.toml  run.bat  run.sh
app/backend/: config.py  jobs.py  main.py  pathing.py  pipelines.py  preflight.py  presets.py  progress.py
app/frontend/: app.js  index.html  package.json  pnpm-lock.yaml  style.css  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/api/: client.ts  dialogs.ts  health.ts  jobs.ts  pipelines.ts  presets.ts  preview.ts
app/frontend/src/components/convert/: argv-override.tsx  argv-preview.tsx  camera-platform-selector.tsx  convert-button.tsx  convert-panel.tsx  param-field.tsx  params-form.tsx  preset-bar.tsx  preset-description.tsx  test-render-panel.tsx
app/frontend/src/components/jobs/: job-card.tsx  job-log.tsx  job-progress.tsx  jobs-panel.tsx
app/frontend/src/components/join/: join-panel.tsx
app/frontend/src/components/layout/: header.tsx  health-pills.tsx  main-tabs.tsx  (+1 more)
app/frontend/src/hooks/: use-dialog.ts  use-health.ts  use-job-events.ts  use-jobs.ts  use-pipelines.ts  use-presets.ts  use-preview-sync.ts  use-preview.ts  use-resize-observer.ts
app/frontend/src/lib/: camera-detect.ts  derive-pipeline.ts  format.ts  param-groups.ts
app/frontend/src/providers/: query-provider.tsx
app/frontend/src/state/: app-context.tsx  app-reducer.ts
app/frontend/src/types/: api.ts
docs/: YouTube, Instagram 10-Bit Video Settings.txt
libs/Gyroflow-windows64/: README
tests/: test_pathing.py  test_pipelines.py  test_presets.py  test_progress.py
(+7 files in other folders)
